serene-haven admin changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <title>The Wild Oasis</title>
+    <title>The Serene Haven</title>
   </head>
   <body>
     <div id="root"></div>
